# approx-models

./: .gitignore  AUTHORS  README.md  TOTHINK.md  _CoqProject  approx.v  approx_periodicity.v  banach.v  cball.v  chebyshev.v  contraction.v  coq-approx-models.opam  div.v  domfct.v  errors.v  ex_eq_resolution.v  example_abs.v  example_h16.v  example_polynom_eq.v  examples.v  fourier-bis.v  fourier.v  inrel.v  interfaces.v  intervals.v  neighborhood.v  polynom_eq.v  posreal_complements.v  rescale.v  sqrt.v  syntax.v  tactic.v  taylor.v  tests.v  utils.v  vectorspace.v
