opam-version: "2.0"
maintainer: "damien.pous@ens-lyon.fr"
version: "dev"

homepage: "https://gitlab.inria.fr/amahboub/approx-models"
dev-repo: "https://gitlab.inria.fr/amahboub/approx-models.git"
bug-reports: "https://gitlab.inria.fr/amahboub/approx-models/issues"
license: "CECILL-B"

synopsis: "Approximation Models in Coq"
description: """
This is a Coq library to verify rigorous approximations of univariate
functions on real numbers. Based on interval arithmetic, this library
also implements a technique of validation a posteriori based on the
Banach fixed-point theorem. We moreover provide an implementation of
verified Chebyshev approximations."""

build: [make "-j%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {(>= "8.13" & < "8.14~") | (= "dev")}
  "coq-interval"
  "coq-coquelicot" {(= "3.2.0")}
]

tags: [
  "category:Computer Science/Approximation Theory"
  "keyword:approximation theory"
  "keyword:chebyshev polynomials"
  "keyword:certificate-based approximation"
  "logpath:ApproxModels"
]
authors: [
  "Florent Bréhard"
  "Assia Mahboubi"
  "Damien Pous"
]
