opam-version: "2.0"
maintainer: "damien.pous@ens-lyon.fr"
version: "dev" # CHECK

homepage: "https://gitlab.inria.fr/amahboub/approx-models"
dev-repo: "git+https://gitlab.inria.fr/amahboub/approx-models.git"
bug-reports: "https://gitlab.inria.fr/amahboub/approx-models/issues"
license: "CECILL-B"

synopsis: "Rigorous approximations with a posteriori verified operations"
description: """
This is a Coq library to verify rigorous approximations of univariate
functions on real numbers. Based on interval arithmetic, this library
also implements a technique of validation a posteriori based on the
Banach fixed-point theorem. We moreover provide an implementation of
verified Chebyshev approximations."""

build: [make "-j%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {(>= "8.13" )}
  "coq-interval"
  "coq-coquelicot" {(= "3.2.0")}
]

tags: [
  "category:Mathematics/Approximation Theory"
  "keyword:approximation theory"
  "keyword:chebyshev polynomials"
  "keyword:certificate-based approximation"
  "logpath:ApproxModels"
  "date:2021-06-15" # CHECK 
]
authors: [
  "Florent Bréhard"
  "Assia Mahboubi"
  "Damien Pous"
]
